add sepolia endpoint and .env keys for accessing rpc and deploy
Signed-off-by: absoluteyl <17698254+absoluteyl@users.noreply.github.com>

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[rpc_endpoints]
+sepolia = "https://eth-sepolia.g.alchemy.com/v2/${ALCHEMY_ETH_SEPOLIA_KEY}"
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
